--- a/index.html
+++ b/index.html
@@ -7,5 +7,29 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <title>The Wolf Skincare</title>
   </head>
-  <body></body>
+  <body>
+    <div id="root">
+      <header class="container header">
+        <div class="inner-container header-container">
+          <div class="navbar">
+            <div class="logo-wrapper">
+              <a href="https://tanzeel.website" class="logo-link">
+                <img
+                  src="./assets/the-wolf-logo.jpg"
+                  alt="Wolf Skincare"
+                  class="logo"
+                />
+              </a>
+            </div>
+            <nav class="main-navigation">
+              <a href="#" class="nav-link">Home</a>
+              <a href="#" class="nav-link">About Us</a>
+              <a href="#" class="nav-link">Products</a>
+              <a href="#" class="nav-link">Sign Up</a>
+            </nav>
+          </div>
+        </div>
+      </header>
+    </div>
+  </body>
 </html>
