coded 'hero' section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
           </div>
         </div>
       </header>
+      <section class="container hero">
+        <div class="inner-container hero-container">
+          <div class="hero-desc">
+            <h2 class="hero-desc__title">Upgrade Your Skin Care Routine</h2>
+            <p class="hero-desc__text">
+              We introduce the first Face Mask for Men. Made to deeply recharge
+              your skin, with a sheet soaked with all active ingredients you
+              need.
+            </p>
+            <div class="hero-links">
+              <a href="#" class="hero-link">Get Started</a>
+              <a href="#" class="hero-link hero-cta-link">Order Now</a>
+            </div>
+          </div>
+          <div class="hero-product">
+            <img
+              src="./assets/hero-image.png"
+              alt="The Wolf Project"
+              class="hero-image"
+            />
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
