coded 'early bird' section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
             <div class="hero-links">
               <a href="#" class="hero-link">Get Started</a>
-              <a href="#" class="hero-link hero-cta-link">Order Now</a>
+              <a href="#" class="hero-link wolf-link">Order Now</a>
             </div>
           </div>
           <div class="hero-product">
@@ -50,6 +50,92 @@
               alt="The Wolf Project"
               class="hero-image"
             />
+          </div>
+        </div>
+      </section>
+      <section class="container main-content">
+        <div class="inner-container content-container">
+          <h2 class="content__title">ingredients</h2>
+          <div class="content">
+            <div class="column left">
+              <div class="article">
+                <h3 class="article__title">organic cotton</h3>
+                <p class="article__body">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Accusantium quos consequatur dolores pariatur non quasi
+                  obcaecati quis, animi ducimus, magni eveniet quas eos
+                  accusamus qui doloribus enim sapiente, maxime tempore.
+                </p>
+              </div>
+              <div class="article">
+                <h3 class="article__title">hyderating serum</h3>
+                <p class="article__body">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Accusantium quos consequatur dolores pariatur non quasi
+                  obcaecati quis, animi ducimus, magni eveniet quas eos
+                  accusamus qui doloribus enim sapiente, maxime tempore.
+                </p>
+              </div>
+            </div>
+
+            <div class="column center">
+              <img
+                src="./assets/wolf-project-main.jpg"
+                alt="Wolf Project Recharging Mask"
+                class="content-image"
+              />
+            </div>
+
+            <div class="column right">
+              <div class="article">
+                <h3 class="article__title">carbon active</h3>
+                <p class="article__body">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Accusantium quos consequatur dolores pariatur non quasi
+                  obcaecati quis, animi ducimus, magni eveniet quas eos
+                  accusamus qui doloribus enim sapiente, maxime tempore.
+                </p>
+              </div>
+              <div class="article">
+                <h3 class="article__title">oil control essence</h3>
+                <p class="article__body">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Accusantium quos consequatur dolores pariatur non quasi
+                  obcaecati quis, animi ducimus, magni eveniet quas eos
+                  accusamus qui doloribus enim sapiente, maxime tempore.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="product">
+            <h3 class="product__title">
+              15 minutes in a week. All your skin needs. Hydration. Purity. Oil
+              Control.
+            </h3>
+            <p class="product__desc">
+              A sheet of 100% organic cotton that makes sure that the most
+              beneficial ingredients for your skin are actually absorbed deep
+              into your skin instead of evaporating away.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="container early-bird-content">
+        <div class="inner-container early-bird-container">
+          <div class="early-bird-product">
+            <img
+              src="./assets/early-bird.png"
+              alt="Wolf Skincare Earlybird Product Offer"
+              class="early-bird-image"
+            />
+          </div>
+          <div class="early-bird-offer">
+            <h2 class="offer__title">Early Birds: An Unmissable Offer</h2>
+            <p class="offer__desc">
+              An Unmissable Offer for the first ones to book 25$ worth of free
+              stuff
+            </p>
+            <a href="#" class="early-bird-link wolf-link">order now</a>
           </div>
         </div>
       </section>
