coded 'products' and 'testimonials' section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </section>
       <section class="container main-content">
         <div class="inner-container content-container">
-          <h2 class="content__title">ingredients</h2>
+          <h2 class="section__title">ingredients</h2>
           <div class="content">
             <div class="column left">
               <div class="article">
@@ -136,6 +136,84 @@
               stuff
             </p>
             <a href="#" class="early-bird-link wolf-link">order now</a>
+          </div>
+        </div>
+      </section>
+      <section class="container main-product-content">
+        <div class="inner-container main-product-container">
+          <h3 class="section__title">Products</h3>
+          <div class="products">
+            <div class="product">
+              <div class="product-wrapper">
+                <img
+                  src="./assets/product-1.jpg"
+                  alt="Product 01"
+                  class="product-image"
+                />
+              </div>
+              <h4 class="product__desc">Cleanser</h4>
+            </div>
+            <div class="product">
+              <div class="product-wrapper">
+                <img
+                  src="./assets/product-2.jpg"
+                  alt="Product 02"
+                  class="product-image"
+                />
+              </div>
+              <h4 class="product__desc">Facial Mask</h4>
+            </div>
+            <div class="product">
+              <div class="product-wrapper">
+                <img
+                  src="./assets/product-3.jpg"
+                  alt="Product 03"
+                  class="product-image"
+                />
+              </div>
+              <h4 class="product__desc">Coming Soon</h4>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="container testimonial-content">
+        <div class="inner-container testimonial-container">
+          <h3 class="section__title">People Love Us</h3>
+          <div class="testimonials">
+            <div class="testimonial">
+              <div class="author-image-wrapper">
+                <img
+                  src="./assets/author-1.jpg"
+                  alt="Gabriel"
+                  class="author-image"
+                />
+              </div>
+              <h3 class="author-name">Gabriel Dupont</h3>
+              <p class="author-job">Chef | Early Adopter</p>
+              <p class="author-comment">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                porro tenetur possimus qui culpa optio, sunt similique molestiae
+                voluptate minima, saepe adipisci quis cumque. Accusantium at
+                earum molestiae laborum tempore
+              </p>
+            </div>
+            <div class="testimonial">
+              <div class="author-image-wrapper">
+                <img
+                  src="./assets/author-2.jpg"
+                  alt="Gabriel"
+                  class="author-image"
+                />
+              </div>
+              <h3 class="author-name">Barbara I. Jackson</h3>
+              <p class="author-job">Communications specialist</p>
+              <p class="author-comment">
+                Dignissimos sint et vel quia asperiores placeat repellendus,
+                velit molestias? Consequatur optio fugiat dolor quae eius
+                neque.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Officiis rem nulla est ipsum
+              </p>
+            </div>
           </div>
         </div>
       </section>
