--- a/index.html
+++ b/index.html
@@ -217,6 +217,50 @@
           </div>
         </div>
       </section>
+      <footer class="container footer-content">
+        <div class="inner-container footer-container">
+          <div class="column column-1">
+            <div class="footer-logo-wrapper">
+              <img
+                src="./assets/footer-logo.jpg"
+                alt="The Wolf Logo"
+                class="footer-logo"
+              />
+            </div>
+          </div>
+          <div class="column column-2">
+            <nav class="footer-links">
+              <h3 class="links-title">Company</h3>
+              <a href="#" class="footer-link">About Us</a>
+              <a href="#" class="footer-link">Contact</a>
+              <a href="#" class="footer-link">Search</a>
+            </nav>
+          </div>
+          <div class="column column-3">
+            <nav class="footer-links">
+              <h3 class="links-title">Account</h3>
+              <a href="#" class="footer-link">Login</a>
+              <a href="#" class="footer-link">Signup</a>
+            </nav>
+          </div>
+          <div class="column column-4">
+            <nav class="footer-links">
+              <h3 class="links-title">Social</h3>
+              <a href="#" class="footer-link">Facebook</a>
+              <a href="#" class="footer-link">Twitter</a>
+              <a href="#" class="footer-link">Instagram</a>
+            </nav>
+          </div>
+          <div class="attribution">
+            <p class="tanzeel">
+              coded with ❤️ by
+              <a href="http://www.tanzeel.website" class="attribution__link"
+                >Tanzeel Akhtar</a
+              >
+            </p>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
